--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilos/style-phone.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Ana Modas</title>
 </head>
 <body>
   <header>
     <h2>Ana modas</h2>
-    <menu>
+    <span id="menu"class="material-symbols-outlined" onclick="clickMenu()">
+      menu
+      </span>
+    <menu id="itens">
       <ul>
         <li><a href="">Conjuntos</a></li>
         <li><a href="">Roupas</a></li>
@@ -26,51 +31,61 @@
   <main>
     <div id="conjunto-verao">
       <picture>
-        <source media="(max-width: 750px)" srcset="imagens/imagem-principal-phone" type="image/png">
+        <source media="(min-width: 600px)" srcset="imagens/imagem-principal-phone" type="image/png">
         <!--Faz com que quando diminuir ou aumentar o site, a imagem mude automaticamente-->
-        <a href=""><img height="750px" width="1680px" src="Imagens/imagem-principal.png" alt="Conjunto de verão"></a>
+        <img height="750px" width="1680px" src="Imagens/imagem-principal.png" alt="Conjunto de verão">
+        </picture>
     </div>
     <div id="rolagem2">
       <section class="texto-rolagem2">
-        <h3>A loja mais amada do bairro</h3>
-        <h1>Bem-vindo</h1>
+        <h2>A loja mais amada do bairro</h2>
+        <h1>BEM-VINDO</h1>
         <h2>Reconhecido pelas roupas e conjunto desde 2013</h2>
         <p>Temos um método de trabalho único no universo da moda de atendimento individual, marque seu horário conosco e seja atendida(o) individualmente.</p>
-        <a href=""><p>Mais sobre nós</p></a>
+        <a href="">Mais sobre nós</a>
       </section>
       <section class="imagem-rolagem2">
-        <img src="Imagens/imagem-principal2.png" alt="">
+        <img height="600" width="360" src="Imagens/imagem-principal2.png" alt="">
+        <article>
+          <h2>Horarios</h2>
+          <p>Todos os dias, de 9h até 23h</p>
+          <a href="">Agende o seu aqui</a>
+        </article>
       </section>
     </div>
     <div id="novidades">
       <section class="novidades-titulo">
         <h2>Confira as nossas novidades</h2>
-        <a href=""><p>Ver todos</p></a>
+        <a href="">Ver todos</a>
       </section>
       <section class="novidades-produtos">
-        <article>
+        <article class="produtos1">
+          <aside>
           <img src="Imagens/produtos-desktop.png" alt="Vestido">
           <h3>Vestido longo</h3>
           <p>3x R$ 99,90</p>
-          <p>R$ 300,00</p>
+          <p class="valor">R$ 300,00</p>
+          </aside>
+           <aside>
+           <img src="Imagens/produtos-desktop.png" alt="Vestido">
+          <h3>Vestido longo</h3>
+          <p>3x R$ 99,90</p>
+          <p class="valor">R$ 300,00</p>
+           </aside>
         </article>
-        <article>
-          <img src="Imagens/produtos-desktop.png" alt="Vestido">
+        <article class="produtos1">
+          <aside>
+             <img src="Imagens/produtos-desktop.png" alt="Vestido">
           <h3>Vestido longo</h3>
           <p>3x R$ 99,90</p>
-          <p>R$ 300,00</p>
-        </article>
-        <article>
-          <img src="Imagens/produtos-desktop.png" alt="Vestido">
+          <p class="valor">R$ 300,00</p>
+          </aside>
+           <aside>
+           <img src="Imagens/produtos-desktop.png" alt="Vestido">
           <h3>Vestido longo</h3>
           <p>3x R$ 99,90</p>
-          <p>R$ 300,00</p>
-        </article>
-        <article>
-          <img src="Imagens/produtos-desktop.png" alt="Vestido">
-          <h3>Vestido longo</h3>
-          <p>3x R$ 99,90</p>
-          <p>R$ 300,00</p>
+          <p class="valor">R$ 300,00</p>
+           </aside>
         </article>
       </section>
     </div>
@@ -109,5 +124,14 @@
       </section>
     </div>
   </footer>
+  <script>
+    function clickMenu(){
+        if (itens.style.display == 'block') {
+          itens.style.display = 'none'
+        } else {
+          itens.style.display = 'block'
+        }
+    }
+  </script>
 </body>
 </html>
