atualizando tag picture

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   </header>
   <main>
     <div id="conjunto-verao">
+    <a href="">
       <picture>
-        <source media="(min-width: 600px)" srcset="imagens/imagem-principal-phone" type="image/png">
-        <!--Faz com que quando diminuir ou aumentar o site, a imagem mude automaticamente-->
-        <img height="750px" width="1680px" src="Imagens/imagem-principal.png" alt="Conjunto de verão">
-        </picture>
+        <source media="(max-width: 600px)"  width="415px" height="370px" srcset="Imagens/imagem-principal-phone2.png" type="image/png">
+        <img src="Imagens/imagem-principal.png" alt="Conjunto verão">
+      </picture>
+    </a>
     </div>
     <div id="rolagem2">
       <section class="texto-rolagem2">
