--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="texto-rolagem2">
         <h2>A loja mais amada do bairro</h2>
         <h1>BEM-VINDO</h1>
-        <h2>Reconhecido pelas roupas e conjunto desde 2013</h2>
+        <h2>Reconhecida pelas roupas e conjuntos desde 2013</h2>
         <p>Temos um método de trabalho único no universo da moda de atendimento individual, marque seu horário conosco e seja atendida(o) individualmente.</p>
         <a href="">Mais sobre nós</a>
       </section>
