--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilos/style-phone.css">
+  <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Ana Modas</title>
 </head>
 <body>
   <header>
-    <h2>Ana modas</h2>
-    <span id="menu"class="material-symbols-outlined" onclick="clickMenu()">
-      menu
-      </span>
-      <menu id="itens">
-        <ul>
-          <li><a href="">Conjuntos</a></li>
-          <li><a href="">Roupas</a></li>
-          <li><a href="">Agende seu horário</a></li>
-        </ul>
-      </menu>
+    <div>
+      <h2>Ana modas</h2>
+      <span id="menu" class="material-symbols-outlined" onclick="clickMenu()">
+        menu
+        </span>
+        <menu id="itens">
+          <ul>
+            <li><a href="">Conjuntos</a></li>
+            <li><a href="">Roupas</a></li>
+            <li><a href="">Agende seu horário</a></li>
+          </ul>
+        </menu>
+   
     <section>
-      <a href=""><img src="Imagens/lupa.png" alt="Pesquise aqui"></a>
-      <a href=""><img src="Imagens/conta.png" alt="Seu perfil"></a>
-      <a href=""><img src="Imagens/carrinho.png" alt="Carrinho de compras"></a>
-    </section>
+      <a href=""><img height="25px" src="Imagens/lupa.png" alt="Pesquise aqui"></a>
+      <a href=""><img height="25px" src="Imagens/conta.png" alt="Seu perfil"></a>
+      <a href=""><img height="25px" src="Imagens/carrinho.png" alt="Carrinho de compras"></a>
+    </section> 
+  </div>
   </header>
   <main>
     <div id="conjunto-verao">
