--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <title>Ana Modas</title>
 </head>
 <body>
-  <header>
+ 
+  <header> 
     <div>
       <h2>Ana modas</h2>
       <span id="menu" class="material-symbols-outlined" onclick="clickMenu()">
@@ -21,7 +22,7 @@
           <ul>
             <li><a href="">Conjuntos</a></li>
             <li><a href="">Roupas</a></li>
-            <li><a href="">Agende seu horário</a></li>
+            <li><a class="horario" href="">Agende seu horário</a></li>
           </ul>
         </menu>
    
@@ -111,8 +112,6 @@
         <p><img width="20px" src="Imagens/whatts-icon.png" alt=""> (44)99909-2318</p>
         <p><img width="20px" src="Imagens/telefone-icon.png" alt=""> (44)99909-2318</p>
         <p><img width="20px" src="Imagens/email-icon.png" alt=""> analimapvai@gmail.com</p>
-        <img class="instagram"  width="20px" src="Imagens/instagram-icon.png" alt="">
-        <img width="20px" src="Imagens/facebook-icon.png" alt="">
       </section>
       <section class="sobre">
         <h3>Sobre</h3>
